# Project_69

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Parallelization+Queieing.md  README.md  cursor.md  db.py  docker-entrypoint.sh  main.py  params.md  pyproject.toml  server.py  setup_voices.py  story_tts.py  test_story.md
docs/: DEPLOY_LINODE.md  DEPLOY_RUNPOD.md  PLAN_MID_SESSION_EDIT.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  index.css
frontend/src/components/: AudioPlayer.tsx  ChatWindow.tsx  ChunkPlayer.tsx  Message.tsx  QuickReplies.tsx  VoicePoweredOrb.tsx
scripts/: docker-build-push.sh
tts_claude_task_docs/: 01_task_breakdown.md  02_api_endpoints.md  03_database_schema.md  04_queue_worker_design.md  05_gpu_batching.md  06_story_template_system.md
tts_system_architecture_docs/: 01_system_architecture_overview.md  02_audio_generation_pipeline.md  03_gpu_throughput_model.md  04_deployment_architecture.md  05_editable_story_pipeline.md
voices/: alyssa_conds.pt  audiomass-output_conds.pt
